--- a/index.html
+++ b/index.html
@@ -10,39 +10,40 @@
 </head>
 
 <body>
+   <div class="bg">
+      <div class="conteiner_1">
+         <h1>About Victoria Kirst</h1>
+         <p>My name is <span class="c--yellow">Victoria</span class="c--yellow"> and I am jolly, and <span
+               class="c--yellow">four-eyed.</span class="c--yellow"></p>
+         <h3>My Classes This Quarter</h3>
+         <ul>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+            <li>Lorem ipsum dolor sit amet</li>
+         </ul>
+         <h3>My Favorite Movies</h3>
+         <p><em>(Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, odit?)</em></p>
+         <ol>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit <span class="c--red">(IMDB)</span></li>
+            <li>Lorem ipsum dolor sit amet <span class="c--red">(IMDB)</span></li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, repellendus? <span
+                  class="c--red">(IMDB)</span></li>
+         </ol>
+         <h3>My Moods</h3>
+         <div class="mymoods">
+            <pre>Happy: </pre>
+            <img src="https://via.placeholder.com/200x250" alt="">
 
-   <div class="conteiner_1">
-      <h1>About Victoria Kirst</h1>
-      <p>My name is <span class="c--yellow">Victoria</span class="c--yellow"> and I am jolly, and <span
-            class="c--yellow">four-eyed.</span class="c--yellow"></p>
-      <h3>My Classes This Quarter</h3>
-      <ul>
-         <li>Lorem ipsum dolor sit amet</li>
-         <li>Lorem ipsum dolor sit amet</li>
-         <li>Lorem ipsum dolor sit amet</li>
-         <li>Lorem ipsum dolor sit amet</li>
-      </ul>
-      <h3>My Favorite Movies</h3>
-      <p><em>(Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, odit?)</em></p>
-      <ol>
-         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit <span class="c--red">(IMDB)</span></li>
-         <li>Lorem ipsum dolor sit amet <span class="c--red">(IMDB)</span></li>
-         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, repellendus? <span
-               class="c--red">(IMDB)</span></li>
-      </ol>
-      <h3>My Moods</h3>
-      <div class="mymoods">
-         <pre>Happy: </pre>
-         <img src="https://via.placeholder.com/200x250" alt="">
-
-         <pre>sad: </pre>
-         <img src="https://via.placeholder.com/400x250" alt="" download>
+            <pre>sad: </pre>
+            <img src="https://via.placeholder.com/400x250" alt="" download>
+         </div>
+         <h3>fun facts about my neighbors</h3>
+         <ul>
+            <li>Lorem ipsum dolor sit amet <em>consectetur</em>, adipisicing elit. Aut, nam!</li>
+            <li>Lorem ipsum <em>dolor sit amet </em> consectetur</li>
+         </ul>
       </div>
-      <h3>fun facts about my neighbors</h3>
-      <ul>
-         <li>Lorem ipsum dolor sit amet <em>consectetur</em>, adipisicing elit. Aut, nam!</li>
-         <li>Lorem ipsum <em>dolor sit amet </em> consectetur</li>
-      </ul>
    </div>
 
    <div class="conteiner2">
@@ -78,6 +79,7 @@
          <p>9<sup>2</sup> = 81</p>
       </div>
    </div>
+
 
 </body>
 
